# GaussianScan-Recon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
docs/: README.md
docs/images/: README.md
gaussian_scan/: __init__.py  camera.py  dataset.py  gaussian_model.py  renderer.py  utils.py  visualization.py
scripts/: estimate_depth.py  preprocess.py  train_mock.py  visualize.py
tests/: __init__.py  test_config.py  test_gaussian_model.py  test_preprocess.py
